# TraceSignal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PR4_REVIEW_FINDINGS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json.tmp.121392.c13cc8d6d390
.claude/skills/verify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: AGENT.md  ANOMALY_DETECTION.md  CONCEPT.md  DEPLOYMENT_NGINX.md  INPUT_FORMATS.md  MODEL_REFINEMENT.md  PROGRESS.md  ROADMAP.md  TECH_STACK.md  nginx-tls.conf
docs/archive/: PLAN_FAST_NGINX_INGESTION.md  PR137_REVIEW_FINDINGS.md  PR54_REVIEW_FINDINGS.md  PR7_REVIEW_FINDINGS.md  PR8_REVIEW_FINDINGS.md  PROGRESS_SESSIONS_01-70.md  ROADMAP_PHASE1.md
docs/superpowers/plans/: 2026-07-19-agent-a3-a6-a1-a7.md  2026-07-19-agent-read-parity-mcp-http.md
docs/superpowers/specs/: 2026-07-19-agent-a1-a6-a7-design.md  2026-07-19-phase3-investigation-depth-design.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  index.css  main.ts  router.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  agent.ts  annotations.ts  anomalies.ts  auth.ts  cases.ts  client.ts  converters.ts  dispositions.ts  enrichers.ts  events.ts  export.ts  health.ts  jobs.ts  similarity.ts  sources.ts  timelines.ts  types.ts  views.ts  viz.ts
frontend/src/components/: CaseList.vue  HelloWorld.vue  Notifications.vue  UploadForm.vue  UploadFormButton.vue
frontend/src/hooks/: useAnnotationMutations.ts  useCaseStream.ts  useCurrentUser.ts  useDebouncedValue.ts  useDisposition.ts  useMarkNormal.ts  usePasswordChangeForm.ts  useTriageCoverage.ts  useUserNames.ts
frontend/src/layouts/: AppBar.vue  Default.vue  View.vue
frontend/src/lib/: caseAccess.ts  countryFlag.ts  effectiveFilters.ts  enrichment.ts  finding-normalize.ts  format.ts  glossary.ts  guidance.ts  markerCluster.ts  privateIp.ts  queryClient.ts  queryParams.ts  time.ts  tourSteps.ts  triage-coverage.ts  (+1 more)
scripts/: gen_chart_meta.py  vendor_converters.py
src/tracevector/: __init__.py
src/vestigo/: __init__.py  stats.py
tests/: conftest.py  test_admin_api.py  test_admin_enrichers_api.py  test_agent_api.py  test_agent_compaction.py  test_agent_encoding.py  test_agent_fidelity.py  test_agent_runtime.py  test_agent_schema.py  test_agent_tokens.py  test_agent_tools.py  test_agent_window.py  test_annotations.py  test_anomaly_stats.py  test_arrow_insert_clickhouse.py  test_audit_api.py  test_auth_api.py  test_baselines_api.py  test_buckets.py  test_cli.py  test_clickhouse_store.py  test_cloudtrail_converter.py  test_columns.py  test_compare_baseline_cache_clickhouse.py  test_converters_api.py  test_dispositions_api.py  test_dt.py  test_embeddings_capability.py  test_enrichers.py  test_events_router.py  test_field_mappings.py  test_field_mappings_clickhouse.py  test_field_recommend.py  test_field_stats.py  test_filterlog_converter.py  test_jobs.py  test_jobs_api.py  test_login_backoff.py  test_mcp_http.py  test_migration_0004.py  (+30 more)
tests/data/: cloudtrail.json  cloudtrail_CloudTrail-Digest.json  gen_pcap_fixtures.py  sample.pcap  sample.pcapng  timesketch_generic.csv  timesketch_generic.jsonl
(+393 files in other folders)
