[project]
name = "tracevector"
version = "0.1.0"
description = "Local-first, forensic-grade log investigation platform with vector-backed anomaly detection."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "ScalarForensic" },
]
keywords = ["forensics", "timeline", "log-analysis", "vector-search", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.13.0,<2.0.0",
    "clickhouse-connect>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "torch>=2.2.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=3.3.0",
    "onnxruntime>=1.20.0",
    "numpy>=2.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
]

[project.scripts]
tv = "tracevector.cli.main:app"
tv-web = "tracevector.web.app:start"

[project.urls]
Homepage = "https://github.com/ScalarForensic/TraceVector"
Repository = "https://github.com/ScalarForensic/TraceVector"
Documentation = "https://github.com/ScalarForensic/TraceVector/blob/main/docs/CONCEPT.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracevector"]

# --- UV package indexes ------------------------------------------------------
# Default: CPU-only PyTorch for the smallest install footprint.
# Uncomment ONE GPU block below to enable acceleration.
# ROCm is the primary GPU target; CUDA is also supported.
# See https://docs.astral.sh/uv/concepts/projects/config/#project-indexes

# --- CPU-only PyTorch (default) ---
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

# --- AMD ROCm 6.4 (primary GPU target) ---
# [[tool.uv.index]]
# name = "pytorch-rocm64"
# url = "https://download.pytorch.org/whl/rocm6.4"
#
# [tool.uv.sources]
# torch = { index = "pytorch-rocm64" }
# torchvision = { index = "pytorch-rocm64" }

# --- NVIDIA CUDA 12.8 (secondary GPU target) ---
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
#
# [tool.uv.sources]
# torch = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tracevector --cov-report=term-missing"
